--- a/site/assets/3.0/scss/site.scss
+++ b/site/assets/3.0/scss/site.scss
@@ -48,7 +48,7 @@ body {
   .input-group {
     width: 300px;
     .form-floating {
-      width: auto;
+      width: 0;
     }
   }
 }
